# react-native-monty

./: MontyExpo.podspec  README.md  nitro.json  package.json  post-script.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/montyexpo/: HybridMontyExpo.kt  MontyExpoPackage.kt  MontyRustBridge.kt
example/: App.tsx  app.json  package.json
ios/: HybridMontyExpo.swift
native/monty-expo-ffi/: Cargo.toml
native/monty-expo-ffi/src/: lib.rs
scripts/: build-rust-all.sh  build-rust-android.sh  build-rust-ios.sh  build-web-runtime.mjs  copy-web-runtime.mjs
scripts/web-runtime/: monty.wasi-browser.template.js
src/: MontyExpo.types.ts  MontyExpoModule.ts  MontyExpoModule.web.ts  index.ts
src/specs/: monty-expo.nitro.ts
src/web/monty/: index.d.ts  index.js  upstream.json  wrapper.d.ts  wrapper.js
