[package]
name = "monty_expo_ffi"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Rust FFI bridge for monty-expo"

[lib]
name = "monty_expo_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
jni = { version = "0.21.1", optional = true }
monty = { git = "https://github.com/pydantic/monty.git", tag = "v0.0.8" }
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
android = ["dep:jni"]
